重写推送逻辑,增加smtp推送方案

--- a/config.yml
+++ b/config.yml
@@ -3,9 +3,14 @@ author: 若离QQ：2909998156
 # 特别提示：调试完成后请记得将debug改为false
 # 特别提示：调试完成后请记得将debug改为false
 # 特别提示：调试完成后请记得将debug改为false
-debug: true
-# 邮箱API的地址
-emailApiUrl: ''
+debug: False
+# 消息推送配置，method 0 为禁用 1 为webApi模式 2 为本地smtp模式
+notifyOption:
+    method: 0
+    apiUrl: ''
+    smtpAcc:
+        userName: ''
+        passWord: ''
 
 #用户组配置
 ##################################################
