--- a/config.yml
+++ b/config.yml
@@ -39,7 +39,10 @@ users:
       lon: 104.616858
       #lat 纬度
       lat: 28.793022
+      #检查标题与否
       checkTitle: 1
+      #代理ip信息（格式为：网络协议://ip地址:端口   如：http://127.0.0.1:7890）
+      proxy:
       # 表单信息
       forms:
         - form:
@@ -86,6 +89,8 @@ users:
         lat: 28.800613
         # 是否检查表单的标题（1代表检查，0代表不检查）
         checkTitle: 1
+        #代理ip信息（格式为：网络协议://ip地址:端口   如：http://127.0.0.1:7890）
+        proxy:
         # 表单信息
         forms:
             - form:
@@ -136,6 +141,8 @@ users:
       photo: sign.jpg
       # 是否检查表单的标题（1代表检查，0代表不检查）
       checkTitle: 1
+      #代理ip信息（格式为：网络协议://ip地址:端口   如：http://127.0.0.1:7890）
+      proxy:
       # 表单信息
       forms:
         - form:
@@ -169,3 +176,5 @@ users:
       abnormalReason: ''
       #photo 签到照片，不需要可不填，或者直接删除
       photo: sign.jpg
+      #代理ip信息（格式为：网络协议://ip地址:端口   如：http://127.0.0.1:7890）
+      proxy:
